products/slidetheory/deployment/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: slidetheory
  labels:
    name: slidetheory
